Wed Feb 19 2025 Oksana Sałyk <oksana.salyk@hpe.com>

	* Version 2.1.1

	- remove non-Linux support from all compilation paths (OS_KERNEL_NAME)
	- add an aarch64 cross-compilation (requested by DAOS)
	- mute error messages when transactions are intentionally aborted (#6117)
	- mute error message "Cannot find any matching device, no bad blocks found" when PMDK is used without PMem (#6127)

Thu May 23 2024 Oksana Sałyk <oksana.salyk@intel.com>

	* Version 2.1.0

	This release:
	- Introduces the new logging subsystem in the release build for all libraries.
	  - Messages by default are printed to syslog and stderr but might be redirected to a user-defined function, see pmem(obj)_log_set_function() for details.
	  - Log level thresholds are controlled via new API, see pmem(obj)_log_set_treshold() for details.
	  - These new APIs are not available for LIBPMEM2 and LIBPMEMPOOL at the moment.
	  - The new logging subsystem is suppressed in the debug build when any of the legacy debug logging environment variables is set:
	    - PMEM_LOG_LEVEL/_FILE
	    - PMEM2_LOG_LEVEL/_FILE
	    - PMEMOBJ_LOG_LEVEL/_FILE
	    - PMEMPOOL_LOG_LEVEL/_FILE
	  - The debug logging subsystem becomes DEPRECATED.
	- Introduces fuses against ill-considered use of NDCTL_ENABLE=n.
	  - PMEMOBJ_IGNORE_DIRTY_SHUTDOWN and PMEMOBJ_IGNORE_BAD_BLOCKS are required to acknowledge the understanding of what production-critical functions are missing for the build without NDCTL.
	- Does not allow create PMEMOBJ pool without unsafe shutdown counter (USC) if not explicitly disabled. (#5968)
	  - use PMEMOBJ_CONF="sds.at_create=0" to disable USC when working without PMem (emulated PMem, Docker, etc.).
	- Drops support for building without libpthread (NO_LIBPTHREAD build-time define).

Mon Dec 4 2023 Oksana Sałyk <oksana.salyk@intel.com>

	* Version 2.0.1

	This release:
	- Significantly reduces the libpmem's stack usage.
	- Reduces libpmemobj's stack usage below the 11kB threshold.
	- Fixing minor Coverity issues